<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="app_name">World Clock &amp; Weather</string>
    <string name="add_city">Add City</string>
    <string name="world_clock_settings">World Clock Settings</string>
    <string name="no_clock_defined">Use the menu to add cities.</string>
    <string name="n_selcted_format">{0} selected</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="display_in_widget">Display in widget</string>
    <string name="description">Description</string>
    <string name="refresh">Refresh</string>

    <string-array name="speed_units">
        <item name="kmh">km/h</item>
        <item name="mph">mph</item>
        <item name="ms">m/s</item>
        <item name="beaufort">Beaufort</item>
    </string-array>
    <string-array name="temp_units">
        <item name="celsius">°C</item>
        <item name="fahrenheit">°F</item>
    </string-array>

    <string name="preferences">Preferences</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="wind_speed_unit">Wind speed unit</string>
    <string name="humidity">Humidity</string>
    <string name="wind_format">Wind: {0} at {1}</string>
    <string name="wind_format_no_direction">Wind: {1}</string>
    <string name="weather">Weather</string>
    <string name="activity_title">World Clock</string>
    <string name="clock_widget_name">World Clock</string>
    <string name="weather_widget_name">World Clock &amp; Weather</string>
    <string name="no_data_available">No data available</string>
    <string name="change_temperature_unit">Change temperature unit</string>
    <string name="change_wind_speed_unit">Change wind speed unit</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="widget">Widget</string>
    <string name="use_custom_colors">Use custom colors</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="change_background_color">Change background color and transparency</string>
    <string name="change_foreground_color">Change foreground color</string>

    <string-array name="weather_purge_times">
        <item name="2hours">2 hours</item>
        <item name="4hours">4 hours</item>
        <item name="6hours">6 hours</item>
        <item name="12hours">12 hours</item>
        <item name="24hours">24 hours</item>
        <item name="never">Never</item>
    </string-array>

    <string name="weather_data_purge_time">Purge old data</string>
    <string name="weather_data_purge_time_dialog">Purge weather data older than</string>
    <string name="weather_data_purge_time_summary">When old weather data is removed</string>
    <string name="disable_automatic_update">No automatic update</string>
    <string name="disable_automatic_update_of_weather_conditions">Disable automatic update of weather conditions</string>
    <string name="weather_widget_name_2x1">World Clock &amp; Weather 2x1</string>
    <string name="weather_widget_name_2x2">World Clock &amp; Weather 2x2</string>
    <string name="weather_widget_name_2x3">World Clock &amp; Weather 2x3</string>
    <string name="weather_widget_name_2x4">World Clock &amp; Weather 2x4</string>
    <string name="weather_widget_name_4x1">World Clock &amp; Weather 4x1</string>
    <string name="weather_widget_name_4x2">World Clock &amp; Weather 4x2</string>
    <string name="weather_widget_name_4x3">World Clock &amp; Weather 4x3</string>
    <string name="weather_widget_name_4x4">World Clock &amp; Weather 4x4</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="general">General</string>
    <string name="automatically_sort_cities">Automatically sort cities</string>
    <string name="disable_to_sort_cities_manually">Disable to sort cities manually</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="time_zone">Time zone</string>
    <string name="feedback_title">Send Feedback</string>
    <string name="feedback_summary">Tell us what you think</string>
    <string name="about">About</string>
    <string name="version_caption">Version</string>
    <string name="license_caption">License</string>
    <string name="project_page_caption">Project page</string>
    <string name="developer_caption">Developed by</string>
    <string name="acknowledgements_caption">Acknowledgements</string>
    <string name="license_text">GPL Version 3 or later</string>
    <string name="project_page_text"><a href="https://github.com/arminha/worldclockwidget">github.com/arminha/worldclockwidget</a></string>
    <string name="developer_text">Armin Häberling\nBiswajit Das\nSpecial thanks to <a href="https://vyick.wordpress.com/">vyick</a> for beta testing and her suggestions!</string>
    <string name="acknowledgement_weather">Weather data is provided by <a href="https://openweathermap.org/">Open Weather Map</a>.</string>
    <string name="acknowledgement_icons">Weather icons are based on <a href="http://www.alessioatzeni.com/meteocons/">Meteocons</a> from Alessio Atzeni.</string>
    <string name="acknowledgement_geonames">Time zone and geographical data is provided by <a href="http://www.geonames.org/">GeoNames</a>.</string>
    <string name="about_title">About World Clock &amp; Weather</string>
    <string name="close">Close</string>
    <string name="weather_service_language">en-US</string>

    <string name="api_changes_text_string">Dear user. Recently there is a change of using your favorite weather application due to restriction of usage from Open Weather Map. Please follow the link to signup and enter your key. Thank you for your understanding and co-operation.</string>
    <string name="openweather_signup_link"><a href="https://home.openweathermap.org/users/sign_up">open weather api key link</a></string>
    <string name="new_api_key">new_api_key</string>
    <string name="new_api_key_title">Change API key</string>
    <string name="new_api_key_summary">Please enter your Open Weather Map API key here</string>
    <string name="new_api_key_default_text">Please enter new open weather map API key</string>

    <string name="WeatherApiPreference_key">WeatherApiPreference_key</string>
    <string name="WeatherApiPreference_summary">Kindly set up the new weather api to run this app properly. Please click here for more information..</string>
    <string name="WeatherApiPreference_title">!!! Important !!!</string>
    <string name="WeatherApiPreference_dialog_title">Important!!</string>
    <string name="get_api_message">Please get New API Key from the link below</string>
    <string name="current_api_key">Current API Key</string>

</resources>
