<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/api_changes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/api_changes_text_string"/>

        </LinearLayout>

        <TextView
            style="@style/aboutCaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_api_message" />

        <TextView
            android:id="@+id/openweather_signup"
            style="@style/aboutTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openweather_signup_link" />

        <TextView
            style="@style/aboutCaptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_api_key" />

        <TextView
            android:id="@+id/Api_key_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>

</ScrollView>